# AutoKraken

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  exec.sh
.github/workflows/: cmake-multi-platform.yml
CLI/: CMakeLists.txt
CLI/Include/: CommandParser.hpp
CLI/Source/: CommandParser.cpp  Main.cpp
Core/: CMakeLists.txt
Core/Include/: Basics.hpp  Definitions.hpp  Project.hpp  UIDProvider.hpp  XMLParser.hpp
Core/Source/: Basics.cpp  Project.cpp  UIDProvider.cpp
GUI/: CMakeLists.txt
GUI/Source/: Main.cpp
inc/: MainWindow.hpp
scripts/: test.py
src/: MainWindow.cpp  main.cpp
